gitops/apps/myapp/workload/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placeholder-workload
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: myapp
    platform.ste.io/tier: workload
